--- a/web/src/styles/MapPage.scss
+++ b/web/src/styles/MapPage.scss
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: normal;
+  src: url("fonts/Jost-VariableFont_wght.ttf") format("truetype");
+}
+
 body {
   padding: 0;
   margin: 0;
