--- a/web/src/styles/PlacePanel.scss
+++ b/web/src/styles/PlacePanel.scss
@@ -6,6 +6,7 @@
   background-color: white;
   border-radius: 10px 10px 0 0;
   box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
+  padding: 10px;
 
   position: absolute;
   bottom: 0;
@@ -20,5 +21,17 @@
   @include media-breakpoint-up(md) {
     width: 40%;
     margin-left: -20%;
+  }
+}
+
+.place-header {
+  .place-name {
+    margin-bottom: 0;
+  }
+
+  .place-icon {
+    margin-top: 5px;
+    margin-right: 10px;
+    float: right
   }
 }
