--- a/web/src/styles/PlacePanel.scss
+++ b/web/src/styles/PlacePanel.scss
@@ -6,7 +6,6 @@
   background-color: white;
   border-radius: 10px 10px 0 0;
   box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
-  padding: 10px;
 
   position: absolute;
   bottom: 0;
@@ -25,7 +24,13 @@
 }
 
 .place-header {
+  padding: 10px;
+
   .place-name {
+    margin-bottom: 0;
+  }
+
+  .place-address {
     margin-bottom: 0;
   }
 
@@ -33,5 +38,14 @@
     margin-top: 5px;
     margin-right: 10px;
     float: right
+  }
+}
+
+.risk-indicator {
+  .risk-text {
+    font-size: 14px;
+    font-weight: 600;
+    color: white;
+    text-align: center;
   }
 }
