Begin PlaceReviewsList on web

--- a/web/src/styles/PlacePanel.scss
+++ b/web/src/styles/PlacePanel.scss
@@ -49,3 +49,12 @@
     text-align: center;
   }
 }
+
+.place-reviews-list {
+  padding-top: 10px;
+
+  .no-reviews {
+    text-align: center;
+    font-size: 14px;
+  }
+}
