--- a/web/src/styles/PlacePanel.scss
+++ b/web/src/styles/PlacePanel.scss
@@ -57,4 +57,24 @@
     text-align: center;
     font-size: 14px;
   }
+
+  .place-review {
+    text-align: center;
+    margin: 10px 20px;
+    padding: 5px;
+
+    border: 1px solid #DCDCDC;
+    border-radius: 5px;
+    box-shadow: 0px 0px 3px 1px #dcdcdc;
+
+    .review-time {
+      font-size: 14px;
+      font-weight: 500;
+      margin-bottom: 0;
+    }
+
+    .review-text {
+      margin-bottom: 0;
+    }
+  }
 }
