--- a/web/src/styles/MapPage.scss
+++ b/web/src/styles/MapPage.scss
@@ -1,3 +1,6 @@
+@import "~bootstrap/scss/bootstrap-grid";
+@import "~bootstrap/scss/mixins/breakpoints";
+
 @font-face {
   font-family: "Jost";
   font-style: normal;
@@ -21,4 +24,23 @@ html, body {
   left: 0px;
   right: 0px;
   bottom: 0px;
+}
+
+.search {
+  z-index: 10000;
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.4);
+
+
+  /** Mobile width **/
+  margin-left: -47.5%;
+  width: 95% !important;
+
+  /** Desktop width **/
+  @include media-breakpoint-up(md) {
+    width: 40% !important;
+    margin-left: -20%;
+  }
 }
