--- a/web/src/styles/MapPage.scss
+++ b/web/src/styles/MapPage.scss
@@ -31,8 +31,6 @@ html, body {
   position: absolute;
   top: 20px;
   left: 50%;
-  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.4);
-
 
   /** Mobile width **/
   margin-left: -47.5%;
@@ -42,5 +40,25 @@ html, body {
   @include media-breakpoint-up(md) {
     width: 40% !important;
     margin-left: -20%;
+  }
+
+  .search-input {
+    border-radius: 25px;
+    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.4);
+  }
+
+  .search-icon {
+    cursor: pointer;
+    z-index: 10000;
+    position: absolute;
+    right: 20px;
+    top: 12px;
+  }
+
+  .loading {
+      z-index: 10000;
+      position: absolute;
+      right: 10px;
+      top: 8px;
   }
 }
