--- a/web/src/styles/ReviewModal.scss
+++ b/web/src/styles/ReviewModal.scss
@@ -1,3 +1,45 @@
 .review-modal {
-  z-index: 2000;
+  z-index: 10002;
+}
+
+.backdrop {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 10001;
+}
+
+.rating-question {
+  margin-bottom: 20px;
+
+  .buttons-container {
+    width: 100%;
+    text-align: center;
+  }
+
+  .buttons {
+    display: inline-block;
+  }
+
+  .question-label {
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+  .side-label {
+    display: inline;
+    margin: 10px 10px 0 10px;
+  }
+}
+
+.radio-question {
+  margin-bottom: 20px;
+
+  .question-label, .radio-options {
+    text-align: center;
+  }
 }
