Improve dining type styling

--- a/web/src/styles/PlacePanel.scss
+++ b/web/src/styles/PlacePanel.scss
@@ -112,6 +112,16 @@
 
     .rating-message {
       font-size: 14px;
+      margin-bottom: 5px;
+    }
+
+    .check-icon {
+      margin-right: 5px;
+    }
+
+    .dining-type {
+      font-size: 14px;
+      margin-bottom: 0;
     }
   }
 }
