--- a/web/src/styles/PlacePanel.scss
+++ b/web/src/styles/PlacePanel.scss
@@ -21,12 +21,28 @@
     width: 40%;
     margin-left: -20%;
   }
+
+  .scrolling-panel {
+    position: absolute;
+    top: 70px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    overflow-y: scroll;
+  }
 }
 
 .place-header {
   padding: 10px;
 
+  .wrap-text {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+
   .place-name {
+    font-size: 18px;
     margin-bottom: 0;
   }
 
