--- a/web/src/styles/MapPage.scss
+++ b/web/src/styles/MapPage.scss
@@ -8,6 +8,10 @@
   src: url("fonts/Jost-VariableFont_wght.ttf") format("truetype");
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   padding: 0;
   margin: 0;
