Add welcome modal to web

--- a/web/src/styles/Modal.scss
+++ b/web/src/styles/Modal.scss
@@ -1,5 +1,9 @@
-.review-modal {
+.review-modal, .welcome-modal {
   z-index: 10002;
+}
+
+.modal-content {
+  max-height: 80vh !important;
 }
 
 .backdrop {
