Add disclaimer to WelcomeModal

--- a/web/src/styles/Modal.scss
+++ b/web/src/styles/Modal.scss
@@ -6,6 +6,12 @@
   max-height: 80vh !important;
 }
 
+.welcome-modal {
+  .disclaimer {
+    font-size: 14px;
+  }
+}
+
 .backdrop {
   position: absolute;
   top: 0;
